added venv virtutal enviroment to read me

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
-# Ignore environment variable files
+# Python bytecode
+__pycache__/
+*.py[cod]
+
+# Virtual environment
+.venv/
+venv/
+
+# Environment variable files
 .env
+.env.*
+
+# Logs
+*.log
+
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints/
+
+# IDE/editor settings
+.vscode/
+.idea/
+
+# OS files
+.DS_Store
+Thumbs.db
