--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@ venv/
 # OS files
 .DS_Store
 Thumbs.db
+
+
+# Ignore scraped output files
+au_course_links.txt
+au_courses.json
+au_full_page.html
